[package]
name = "oxideav-container"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Container (demuxer/muxer) traits and registry for oxideav"

readme = "README.md"
homepage.workspace = true
keywords = ["multimedia", "container", "demuxer", "muxer", "pure-rust"]
categories = ["multimedia::encoding", "parser-implementations"]

[dependencies]
oxideav-core = { workspace = true }
