[package]
name = "oxideav-container"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Container (Demuxer + Muxer) traits and registry for oxideav — pure Rust, no C deps"
repository = "https://github.com/OxideAV/oxideav-container"
homepage = "https://github.com/OxideAV/oxideav-container"
readme = "README.md"
keywords = ["multimedia", "container", "demuxer", "muxer", "pure-rust"]
categories = ["multimedia::encoding", "parser-implementations"]

[dependencies]
oxideav-core = "0.0"
